// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`header_actions setDeleteDisabled Dispatches the correct action and payload 1`] = `
Array [
  Object {
    "payload": true,
    "type": "UPDATE_DELETE_NOTE_STATE",
  },
]
`;

exports[`header_actions setNewNoteDisabled Dispatches the correct action and payload 1`] = `
Array [
  Object {
    "payload": true,
    "type": "UPDATE_NEW_NOTE_STATE",
  },
]
`;

exports[`header_actions setSaveDisabled Dispatches the correct action and payload 1`] = `
Array [
  Object {
    "payload": true,
    "type": "UPDATE_SAVE_NOTE_STATE",
  },
]
`;
